force-app/main/default/objects/TwistCacheManager__c/TwistCacheManager__c.object-meta.xml
<CustomObject>
    <label>Twist Cache Manager</label>
    <nameField>
        <displayFormat>CM-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Twist Cache Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>