force-app/main/default/objects/TwistCacheManager__c/fields/isBlocked__c.field-meta.xml
<CustomField>
    <fullName>isBlocked__c</fullName>
    <formula>NOW()&lt;(CreatedDate+(TTL__c/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isBlocked</label>
    <type>Checkbox</type>
</CustomField>