force-app/main/default/objects/TwistCacheManager__c/fields/LangCountry__c.field-meta.xml
<CustomField>
    <fullName>LangCountry__c</fullName>
    <label>LangCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>