force-app/main/default/objects/TwistCacheManager__c/fields/Last_password_date__c.field-meta.xml
<CustomField>
    <fullName>Last_password_date__c</fullName>
    <label>Last password date</label>
    <type>Date</type>
</CustomField>