force-app/main/default/objects/TwistCacheManager__c/fields/TTL__c.field-meta.xml
<CustomField>
    <fullName>TTL__c</fullName>
    <description>Time to live field</description>
    <label>TTL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>