force-app/main/default/objects/TwistCacheManager__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGE_RESTRICTION</fullName>
                <label>Age restriction</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>CHECKED_PASSWORD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>